2008-07-22  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Adam Roben.

        <rdar://problem/5955602> WebKit should support charset name x-windows-949

        * fast/encoding/char-decoding.html:
        * fast/encoding/char-decoding-expected.txt:
        Added a test for this name.

2008-07-21  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=20117
        setBaseAndExtent fails to reverse the current selection

        * editing/selection/setBaseAndExtent-revert-selection-expected.txt: Added.
        * editing/selection/setBaseAndExtent-revert-selection.html: Added.

2008-07-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/5820667> 
        CrashTracer: [USER] 3759 crashes in Safari at FrameLoader::activeDocumentLoader const + 6 while canceling plug-in load

        * http/tests/plugins/geturlnotify-from-npp-destroystream-expected.txt: Added.
        * http/tests/plugins/geturlnotify-from-npp-destroystream.html: Added.

2008-07-21  Rob Buis  <buis@kde.org>

        Reviewed by Mitz.

        Testcase for:
        https://bugs.webkit.org/show_bug.cgi?id=19966
        CSS variables crash when using hex notation for colors

        * fast/css/variables/color-hex-test-expected.txt: Added.
        * fast/css/variables/color-hex-test.html: Added.

2008-07-20  Oliver Hunt  <oliver@apple.com>

        RS=Dan Bernstein.

        Whoops, forgot to commit expected output for this test.

        * fast/js/exception-expression-offset-expected.txt: Added.

2008-07-20  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=12171

        Remove manual SVG property <-> XML attribute synchronization in SVGPolyElement.
        Added svg/custom/poly-points-attribute-changes.svg (testcase from Rob)
