@@ -1,0 +1,119 @@
+Anchor Tests
+----------------------
+AXRole: AXHeading
+AXSubrole: (null)
+AXRoleDescription: heading
+AXChildren: <array of size 5>
+AXHelp: 
+AXParent: <AXHeading: '[edit] Tourette syndrome'>
+AXSize: NSSize: {769, 22}
+AXTitle: [edit] Tourette syndrome
+AXDescription: 
+AXValue: 3
+AXFocused: 0
+AXEnabled: 1
+AXWindow: <AXHeading: '[edit] Tourette syndrome'>
+AXSelectedTextMarkerRange: (null)
+AXStartTextMarker: <AXHeading: '[edit] Tourette syndrome'>
+AXEndTextMarker: <AXHeading: '[edit] Tourette syndrome'>
+AXVisited: 0
+AXLinkedUIElements: (null)
+AXSelected: 0
+AXBlockQuoteLevel: 0
+
+------------
+
+
+AXRole: AXStaticText
+AXSubrole: (null)
+AXRoleDescription: text
+AXChildren: <array of size 0>
+AXHelp: 
+AXParent: <AXStaticText>
+AXSize: NSSize: {4, 18}
+AXTitle: 
+AXDescription: 
+AXValue: 
+AXFocused: 0
+AXEnabled: 1
+AXWindow: <AXStaticText>
+AXSelectedTextMarkerRange: (null)
+AXStartTextMarker: <AXStaticText>
+AXEndTextMarker: <AXStaticText>
+AXVisited: 0
+AXLinkedUIElements: (null)
+AXSelected: 0
+AXBlockQuoteLevel: 0
+
+------------
+
+
+AXRole: AXGroup
+AXSubrole: (null)
+AXRoleDescription: group
+AXChildren: <array of size 1>
+AXHelp: 
+AXParent: <AXGroup>
+AXSize: NSSize: {769, 18}
+AXTitle: 
+AXDescription: 
+AXValue: 
+AXFocused: 0
+AXEnabled: 1
+AXWindow: <AXGroup>
+AXSelectedTextMarkerRange: (null)
+AXStartTextMarker: <AXGroup>
+AXEndTextMarker: <AXGroup>
+AXVisited: 0
+AXLinkedUIElements: (null)
+AXSelected: 0
+AXBlockQuoteLevel: 0
+
+------------
+
+
+2.2 Tourette syndrome
+
+[edit] Tourette syndrome
+
+Link to anchor Link to div 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+This is some text in the middle
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+This is some text. This is a bottom anchor 
+
+
+
+
+
+
+
+
+
+This is a div
